@@ -248,9 +248,10 @@ static struct AY8910interface slalom_ay8910Int = {
 
 static struct MSM5205interface slalom_msm5205Int = {
   1,
-  375000,
+  375000, // 384000? // but via MAME: XTAL(12'000'000)/2/16 = 375 kHz
   { msmIrq },
   { MSM5205_S48_4B },
+  {0},
   { 100 }
 };
 
